<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="main_activity_description">Trouve un restaurant sympa pour déjeuner avec tes collègues.</string>

    <string name="login_facebook">"S'authentifier avec Facebook"</string>
    <string name="login_google">"S'authentifier avec Google"</string>
    <string name="login_email">"S'authentifier avec mon email"</string>
    <string name="login_already">"Commencer"</string>

    <!-- NAVIGATION DRAWER -->
    <string name="ND_title">"Go4Lunch"</string>
    <string name="ND_username">"nom"</string>
    <string name="ND_email">"email"</string>
    <string name="ND_lunch_title">"Mon déjeuner"</string>
    <string name="ND_chat_title">"Chat"</string>
    <string name="ND_settings_title">"Paramètres"</string>
    <string name="ND_logout_title">"Se déconnecter"</string>

    <!-- BOTTOM BAR NAVIGATION -->
    <string name="BBN_map_title">"carte"</string>
    <string name="BBN_list_title">"liste"</string>
    <string name="BBN_workmates_title">"Collègues"</string>

    <!-- TOP BAR NAVIGATION -->
    <string name="TB_title">"J'ai faim!"</string>
    <string name="TB_search_text">"Je cherche un resto"</string>
    <string name="TB_workmates">"Mes collègues"</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>

    <!-- AUTHENTICATION ACTIVITY -->
    <string name="error_not_connected">"Vous devez vous connecter !"</string>
    <string name="error_authentication_canceled">"Authentification annulée"</string>
    <string name="error_no_internet">"Aucune connexion internet !"</string>
    <string name="error_unknown_error">"Une erreur inconnue s'est produite"</string>
    <string name="connection_succeed">"Authentification réussie !"</string>
    <string name="button_login_text_logged">"Afficher le profil"</string>
    <string name="button_login_text_not_logged">"Connexion"</string>

    <!-- PROFILE ACTIVITY -->
    <string name="toolbar_title_login_activity">"Votre Profil"</string>
    <string name="text_input_username">"Nom d'utilisateur"</string>
    <string name="text_view_email">"Adresse email :"</string>
    <string name="button_update_account">"Mettre à jour mon nom"</string>
    <string name="button_delete_account">"Supprimer mon compte"</string>
    <string name="button_sign_out_account">"Déconnexion"</string>
    <string name="info_no_email_found">"Aucune adresse email"</string>
    <string name="info_no_username_found">"Aucun nom d'utilisateur"</string>
    <string name="popup_message_confirmation_delete_account">"Es-tu sûr(e) de vouloir supprimer ton compte ?"</string>
    <string name="popup_message_choice_yes">"Oui !"</string>
    <string name="popup_message_choice_no">"Non"</string>
    <string name="logo_go4lunch">"logo"</string>
    <string name="photo_profile">"photo de profil"</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">1031726573687275</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1031726573687275</string>
    <string name="title_activity_lunch">LunchActivity</string>
    <string name="navigation_drawer_open">"Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- PHONE CALL -->
    <string name="no_phone_number">"Le numéro n'est pas disponible"</string>
    <string name="no_permission_for_call">"Go4Lunch n'a pas la permission de passer des appels"</string>

    <!-- WEBSITE -->
    <string name="no_website">"L'adresse du site web n'est pas disponible"</string>

    <!--WORKMATES -->
    <string name="not_decided_ex">"Gaspard n'a pas encore décidé."</string>
    <string name="not_decided">" n'a pas encore décidé."</string>
    <string name="decided">" mange au restaurant: "</string>

    <!--DETAIL -->
    <string name="call">"Tel"</string>
    <string name="website">"Site web"</string>
    <string name="like">"J'aime"</string>

    <!--LISTRESTO -->
    <string name="no_openinghours">"Les horaires ne sont pas disponibles."</string>
    <string name="isjoining">" vient!"</string>
    <string name="no_hours">"Les horaires ne sont pas disponibles."</string>
    <string name="open_at">"Ouvre à "</string>
    <string name="open_until">"Ouvert jusqu'à "</string>
    <string name="closed">Fermé</string>
    <string name="closed_today">"Fermé aujourd'hui"</string>
    <string name="always_open">Ouvert 24/7</string>
    <string name="resto_name">"Nom du resto"</string>
    <string name="resto_address">"Adresse du resto"</string>
    <string name="resto_open">"Horaires du resto"</string>
    <string name="resto_distance">"Distance"</string>
    <string name="logo_colleagues">"logo nombre de collèques"</string>
    <string name="resto_number_colleagues">"nombre de collèques</string>
    <string name="resto_star">"étoile"</string>
    <string name="resto_photo">"photo du restaurant"</string>

    <!-- LUNCH ACTIVITY -->
    <string name="no_lunch">"Vous n'avez pas encore choisi de restaurant!"</string>
    <string name="error">"Une erreur s'est produite"</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="radius_text">"Sur quelle distance voulez-vous faire la recherche? (en mètres)"</string>
    <string-array name="radius_array">
        <item>200</item>
        <item>500</item>
        <item>1000</item>
    </string-array>

    <string name="type_text">"Quel type d'établisseents recherchez-vous?"</string>
    <string-array name="type_array">
        <item>restaurant</item>
        <item>bar</item>
        <item>cafe</item>
    </string-array>

    <string name="notifications_onoff">"Souhaitez-vous recevoir une notification à midi vous indiquant les heureux collègues qui se joindront à vous?"</string>

    <string name="newsearch">"Relancer la recherche"</string>

    <!-- NOTIFICATION ACTIVITY -->
    <string name="notif_title">"Mon resto du jour"</string>
    <string name="notif_message1">"Aujourd'hui votre pause repas se fera chez: "</string>
    <string name="notif_message2">"Vous y passerez un bon moment avec:  "</string>

    <!-- CHAT ACTIVITY -->
    <string name="toolbar_title_chat_activity">Chats de discussions</string>
    <string name="text_input_title_user_chat_activity">Composer votre message</string>
    <string name="button_title_user_chat_activity">ENVOYER</string>
    <string name="text_view_user_chat_error">Ce fil de discussion ne contient pour le moment aucun message&#8230;</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>
    <string name="chat_image_preview">"Image"</string>
    <string name="chat_add">"Ajouter une image"</string>
    <string name="chat_title_restaurants">"Si on choisissait ensemble un resto?"</string>
    <string name="chat_title_good">"Bons moments"</string>
    <string name="chat_image_sent">"Image envoyée"</string>
    <string name="chat_image_profile">"Photo de profil"</string>

    <!-- MAP FRAGMENT -->
    <string name="gps">"gps"</string>
</resources>
