<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vivant.annecharlotte.go4lunch.MainActivity">

    <!-- IMAGE VIEW GO4LUNCH -->
    <ImageView
        android:layout_width="25dp"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal" />

        <!-- IMAGE VIEW GO4LUNCH -->
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/default_large_margin"
        android:layout_marginBottom="50dp"
        android:background="@drawable/couverts_couleur" />

        <!-- TITLE GO4LUNCH -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="@dimen/default_welcome_title_size"
        android:textStyle="bold" />

        <!-- DESCRIPTION GO4LUNCH -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:text="@string/main_activity_description"
            android:textStyle="italic"
            android:layout_gravity="center_horizontal"/>

            <!-- BUTTON FACEBOOK -->
            <Button
                android:id="@+id/mainactivity_button_login_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_facebook"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                android:background="@color/colorPrimary"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="@dimen/default_large_margin"
                android:padding="@dimen/default_margin"/>

            <!-- BUTTON GOOGLE -->
            <Button
                android:id="@+id/mainactivity_button_login_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_google"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                android:background="@color/colorAccent"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="@dimen/default_large_margin"
                android:padding="@dimen/default_margin"/>

</LinearLayout>